# sudoku_solver

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/sud/: loader.hpp  solver.hpp  square.hpp  sudoku.hpp  types.hpp
include/sud/sol/: algorithm.hpp  common.hpp  must.hpp  mustSolver.hpp  possible.hpp  simple.hpp  simpleSolver.hpp  solver.hpp  solverSudoku.hpp
src/: loader.cpp  loader.hpp  main.cpp  sudoku.cpp  sudoku.hpp
src/sud/: loader.cpp  solver.cpp  square.cpp  sudoku.cpp  types.cpp
src/sud/sol/: algorithm.cpp  common.cpp  must.cpp  mustSolver.cpp  possible.cpp  simple.cpp  simpleSolver.cpp  solver.cpp  solverSudoku.cpp
tests/: CMakeLists.txt  main.cpp
tests/sud/: iterator_tests.cpp  loader_tests.cpp  solver_tests.cpp
